Fix select's width on embed home on mobile

--- a/assets/css/embed-home.scss
+++ b/assets/css/embed-home.scss
@@ -71,6 +71,7 @@
 			height: rem(48px);
 			font-family: inherit;
 			font-size: inherit;
+			max-width: 100%;
 		}
 
 		input[type="radio"] {
